<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_lista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:contentDescription="@string/img_logo_detalhes" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_lbl_url"
            android:textColor="@color/corSec"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/site_lista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/ph_site_url"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_lbl_usuario"
            android:textColor="@color/corSec"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/usuario_lista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ph_email"
            android:textColor="#000"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>