<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margem_vertifical"
    android:paddingLeft="@dimen/margem_horizontal"
    android:paddingRight="@dimen/margem_horizontal"
    android:paddingTop="@dimen/margem_vertifical">

    <LinearLayout
        android:id="@+id/form_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_titulo_cadastro"
            android:textColor="@color/corPri"
            android:textSize="30sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/corSec">

            <EditText
                android:id="@+id/edt_nome_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ph_nome"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/corSec"
                android:textColorHint="@color/corSec" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/corSec">

            <EditText
                android:id="@+id/edt_email_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ph_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/corSec"
                android:textColorHint="@color/corSec" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/corSec"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/corPri">

            <EditText
                android:id="@+id/edt_senha_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ph_senha"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/corSec"
                android:textColorHint="@color/corSec" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/lista_requisitos_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_requisitos_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_requisito_senha"
                android:textColor="@color/corTerc"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_requisitos_senha_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_requisito_senha_1"
                android:textColor="@color/corSec"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_requisitos_senha_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_requisito_senha_2"
                android:textColor="@color/corSec"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_requisitos_senha_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_requisito_senha_3"
                android:textColor="@color/corSec"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_requisitos_senha_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_requisito_senha_4"
                android:textColor="@color/corSec"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_erro_cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"
                android:textColor="@color/textErrorColor"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_cadastro_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/corPri"
            android:text="@string/btn_cadastro_cadastro"
            android:textColor="@color/textButtonColor" />

    </LinearLayout>

</ScrollView>
